5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/1165/executions/1662_2968.log
== SUBMITION (2019-04-15 14:15:05) 
-- CODE:
escolha = input("L/S: ")
quant = float(input("quantos L/S: ?"))
quant2 = float(input("Quantos refeicoes?: "))
conta1 = (quant1 * 5) + (quant2*4)
contas = (quant1 * 3.50) + (quant2*4)
if escolha == "L"
	print(round(conta1, 2))
else:
	print(round(contas, 2))

-- EXECUTION TIME:
0.12229
-- ERROR:
  File "/home/codebench/codes/1662/2968/main.py", line 6
    if escolha == "L"
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:16:04) 
-- CODE:
escolha = input("L/S")
quant1 = float(input("quantos L/S?"))
quant2 = float(input("quantos refeicoes?"))
conta1 = (quant1 * 5) + (quant2*4)
contas = (quant1 * 3.50) + (quant2*4)

if escolha == "L"
	print(round(conta1, 2))
else:
	print(round(contas, 2))

-- EXECUTION TIME:
0.152994
-- ERROR:
  File "/home/codebench/codes/1662/2968/main.py", line 7
    if escolha == "L"
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:16:39) 
-- CODE:
escolha = input("L/S")
quant1 = float(input("quantos L/S? "))
quant2 = float(input("quantos refeicoes? "))
conta1 = (quant1 * 5) + (quant2 * 4)
contas = (quant1 * 3.50) + (quant2 * 4)

if escolha == "L"
	print(round(conta1, 2))
else:
	print(round(contas, 2))

-- EXECUTION TIME:
0.185634
-- ERROR:
  File "/home/codebench/codes/1662/2968/main.py", line 7
    if escolha == "L"
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:16:53) 
-- CODE:
escolha = input("L/S")
quant1 = float(input("quantos L/S? "))
quant2 = float(input("quantos refeicoes? "))
conta1 = (quant1 * 5) + (quant2 * 4)
contas = (quant1 * 3.50) + (quant2 * 4)

if escolha == "L"
	print(round(conta1, 2))
else:
	print(round(contas, 2))

-- ERROR:
File "XXXX", line 7
    if escolha == "L"
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:17:42) 
-- CODE:
escolha = input("L/S")
quant1 = float(input("quantos L/S? "))
quant2 = float(input("quantos refeicoes? "))
conta1 = (quant1 * 5) + (quant2 * 4)
contas = (quant1 * 3.50) + (quant2 * 4)

if escolha == "l"
	print(round(conta1, 2))
else:
	print(round(contas, 2))

-- EXECUTION TIME:
0.194184
-- ERROR:
  File "/home/codebench/codes/1662/2968/main.py", line 7
    if escolha == "l"
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:17:43) 
-- CODE:
escolha = input("L/S")
quant1 = float(input("quantos L/S? "))
quant2 = float(input("quantos refeicoes? "))
conta1 = (quant1 * 5) + (quant2 * 4)
contas = (quant1 * 3.50) + (quant2 * 4)

if escolha == "l"
	print(round(conta1, 2))
else:
	print(round(contas, 2))

-- ERROR:
File "XXXX", line 7
    if escolha == "l"
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:18:04) 
-- CODE:
escolha = input("L/S")
quant1 = float(input("quantos L/S? "))
quant2 = float(input("quantos refeicoes? "))
conta1 = (quant1 * 5) + (quant2 * 4)
contas = (quant1 * 3.50) + (quant2 * 4)

if (escolha == "L"):
	print(round(conta1, 2))
else:
	print(round(contas, 2))

-- EXECUTION TIME:
0.12133
-- TEST CASE 1:
---- input:
S
1
2
---- correct output:
11.5
---- user output:
11.5
-- TEST CASE 2:
---- input:
L
6
7
---- correct output:
58.0
---- user output:
58.0
-- TEST CASE 3:
---- input:
S
2
2
---- correct output:
15.0
---- user output:
15.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
